updated to version 4.2

--- a/benchmark.ini
+++ b/benchmark.ini
@@ -4,7 +4,7 @@ meta-version=4.2.0
 meta-label=Geekbench ${bm_meta_version}
 meta-description=Geekbench 4 measures your system's power and tells you whether your computer is ready to roar.
 meta-dir=Geekbench-${bm_meta_version}-Linux
-meta-home=build.pulse/dist/${bm_meta_dir}
+meta-home=dist/${bm_meta_dir}
 
 # install settings
 install-command=lib/install.sh
